smtlib/src/snapshots/smtlib__proc__tests__cvc4_ill_formed.snap
---
source: smtlib/src/proc.rs
expression: r.unwrap_err()
---
solver returned an error:
Parse Error: <stdin>:6.14: Symbol and is not declared.

  (assert (= and or))
             ^

